# Specs_first

./: .env.example  .gitignore  HANDOFF.md  README.md  README_EN.md  plan.md  pyproject.toml
backend/: api.py  api_models.py  candidate_processor.py  checkpoint.py  config.py  discover_normalize.py  discovery_llm.py  events.py  gemini_client.py  gemini_health.py  live_progress.py  model_router.py  pipeline.py  platform_health.py  retry.py  router_hybrid.py  router_keyword.py  router_schemas.py  task_runner.py
collectors/: __init__.py  asr.py  base.py  browser.py  collection_trace.py  credentials.py  detail_images.py  diagnostics.py  discovery.py  embedded_browser.py  env_schema.py  env_store.py  extractors.py  http.py  http_decompress.py  mock.py  page_sanitize.py  parallel.py  platform_auth.py  protocols.py  rate_limit.py  real.py  resilient_fetch.py  session_cache.py  settings.py  site_strategy.py  sources.py  url_guards.py
docs/: ops-redis-asr.md
frontend/: api_client.py  app.py  event_listener.py  live_data.py  state.py
obsidian/: __init__.py  csv_export.py  writer.py
schemas/: __init__.py  category_profile.py  matrix.py  models.py  serialize.py
scripts/: audit_env.py  run_live_comparison.py  smoke_asr.py  smoke_platforms.py
tests/: test_adapter_registry.py  test_adapters.py  test_api.py  test_asr.py  test_candidate_processor.py  test_category_compat.py  test_category_profile.py  test_checkpoint.py  test_collection_infra.py  test_collection_quality_fixes.py  test_collection_trace_and_guards.py  test_detail_images.py  test_discovery_search_fix.py  (+22 more)
(+27 files in other folders)
