[project]
name = "specs-first"
version = "0.1.0"
description = "Evidence-first product comparison pipeline with Obsidian output."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "streamlit>=1.36.0",
  "redis>=5.0.0",
  "playwright>=1.45.0",
  "openai>=1.40.0",
  "google-generativeai>=0.7.0",
  "bilibili-api-python>=17.0.0",
  "youtube-comment-downloader>=0.1.76",
  "youtube-transcript-api>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
